# skenna

./: .gitignore  README.md  pyproject.toml
examples/: code_review_safe_passage.py  fishing_route_planning.py  llm_output_governance.py
src/skenna/: __init__.py  ai_integration.py  cognitive.py  hazard.py  navigator.py  planner.py  space.py
tests/: test_ai_integration.py  test_cognitive.py  test_hazard.py  test_integration.py  test_navigator.py  test_planner.py  test_space.py
