[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skenna-nav"
version = "0.2.0"
description = "Negative-space navigation for AI systems. Navigate by where the rocks aren't."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance", email = "dev@superinstance.dev"}
]
requires-python = ">=3.10"
keywords = ["navigation", "safety", "ai", "pathfinding", "negative-space", "governance", "avoidance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
viz = [
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/skenna"
Repository = "https://github.com/SuperInstance/skenna"
"Paradigm Document" = "https://github.com/SuperInstance/AI-Writings/blob/main/WHERE_THE_ROCKS_ARENT.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
